<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Skia

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SampleApp</string>
    <string name="overview">Overview</string>
    <string name="toggle_rendering">Toggle rendering</string>
    <string name="slideshow">Slideshow</string>
    <string name="fps">FPS</string>
    <string name="file_saved"><xliff:g id="title">%s1</xliff:g> saved!</string>
    <string name="failed">PDF creation failed</string>
    <string name="save_to_pdf">Save as PDF</string>
</resources>
