<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Google Inc.

     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fps"
        android:title="@string/fps"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/toggle_rendering"
        android:title="@string/toggle_rendering"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/prev"
        android:showAsAction="always"
        android:icon="@*android:drawable/ic_btn_find_prev"
        />
    <item
        android:id="@+id/next"
        android:showAsAction="always"
        android:icon="@*android:drawable/ic_btn_find_next"
        />
    <item
        android:id="@+id/overview"
        android:title="@string/overview"
        />
    <item
        android:id="@+id/slideshow"
        android:title="@string/slideshow"
        />
    <item
        android:id="@+id/save_to_pdf"
        android:title="@string/save_to_pdf"
        />
</menu>
